--- a/pipelines/dbt_project/dbt_project.yml
+++ b/pipelines/dbt_project/dbt_project.yml
@@ -1,16 +1,12 @@
-
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'bootcamp_v4'
+name: 'dbt_project'
 version: '1.0.0'
+config-version: 2
 
-# This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+on-run-start:
+  - '{{ create_schema_if_not_exists(target.schema) }}'
 
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
+profile: 'dbt_project'
+
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -18,28 +14,37 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+clean-targets:
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
-  bootcamp_v4:
-    +materialized: table
-  dbt_project_evaluator:
-    +enabled: "{{ env_var('ENABLE_DBT_PROJECT_EVALUATOR', 'false') | lower == 'true' | as_bool }}"
-
-data_tests:
-  dbt_project_evaluator:
-    +severity: "{{ env_var('DBT_PROJECT_EVALUATOR_SEVERITY', 'warn') }}"
+  dbt_project:
+    staging:
+      +materialized: table
+    intermediate:
+      +materialized: table
 
 seeds:
-  dbt_project_evaluator:
-    +enabled: "{{ env_var('ENABLE_DBT_PROJECT_EVALUATOR', 'false') | lower == 'true' | as_bool }}"
+  dbt_project:
+    raw_stock_data:
+      enabled: true
+      +column_types:
+        "Date": date
+        "Open": float
+        "High": float
+        "Low": float
+        "Close": float
+        "Adj Close": float
+        "Volume": bigint
+        "Ticker": varchar
+        "Company Name": varchar
+        "Industry": varchar
+        "Sector": varchar
+        "Market Cap": bigint
+        "Total Revenue": bigint
+        "Net Income": bigint
 
+vars:
+  raw_database: pipelines
+#  raw_schema: public
