--- a/src/jupyter/Dockerfile
+++ b/src/jupyter/Dockerfile
@@ -8,10 +8,20 @@ WORKDIR /home/jovyan/work
 COPY visualize.py /home/jovyan/work/visualize.py
 
 # Install any necessary Python packages
-RUN pip install --no-cache-dir matplotlib pandas seaborn
+RUN pip install --no-cache-dir matplotlib pandas seaborn psycopg2-binary
+
+# Switch to root user to change permissions
+USER root
+RUN chmod +x /home/jovyan/work/visualize.py
+
+# Switch back to the default user
+USER $NB_UID
+
+# Disable Jupyter Notebook token authentication
+RUN echo "c.NotebookApp.token = ''" >> /home/jovyan/.jupyter/jupyter_notebook_config.py
 
 # Expose the Jupyter Notebook port
 EXPOSE 8888
 
 # Start Jupyter Notebook
-CMD ["start-notebook.sh"]
+CMD ["start-notebook.sh", "--NotebookApp.token=''"]
