--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,6 +4,9 @@ USER root
 COPY ./dbt_project ./dbt_project
 COPY --chown=astro:0 . .
 
+RUN apt-get update \
+    && apt-get -y install libpq-dev gcc \
+    && pip install psycopg2
 USER astro
 RUN python -m venv dbt_venv && \
     . dbt_venv/bin/activate && \
