updated correlations model to have a date column, moved notebook files to 'notebooks' and remapped in docker-compose override file

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -12,7 +12,7 @@ services:
       context: ./jupyter/
       dockerfile: Dockerfile
     volumes:
-      - ./jupyter:/home/jovyan/work
+      - ./jupyter/notebooks:/home/jovyan/work
     ports:
       - 8888:8888
     links:
