--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -6,7 +6,7 @@ exceptiongroup==1.2.0
 fastapi==0.109.2
 h11==0.14.0
 httptools==0.6.1
-idna==3.6
+idna>=3.7
 pydantic==2.6.1
 pydantic_core==2.16.2
 python-dotenv==1.0.1
