--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,8 +18,10 @@
     "chartjs-plugin-annotation": "^1.0.2",
     "chartjs-plugin-zoom": "^1.2.0",
     "clsx": "^2.1.0",
+    "flowbite": "^2.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^4.0.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.22.3"
