--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -25,42 +25,42 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432
       - GRANT_SUDO=yes
 
-#  re_frontend:
-#    container_name: re_frontend
-#    env_file:
-#      - ./frontend/.env
-#    build:
-#      context: ./frontend/
-#      dockerfile: ./Dockerfile
-#    volumes:
-#      - type: bind
-#        source: ./frontend
-#        target: /app
-#      - /app/node_modules
-#    working_dir: /app
-#    ports:
-#      - 5180:5180
-#    networks:
-#      - airflow
-#
-#  re_api:
-#    container_name: re_api
-#    env_file:
-#      - api/.env
-#    build:
-#      context: api/
-#      dockerfile: ./Dockerfile
-#    volumes:
-#      - ./api:/app
-#    ports:
-#      - 8500:8500
-#    expose:
-#      - 8500
-#    depends_on:
-#       - re_astro
-#    networks:
-#      - airflow
-#    environment:
-#      - DATABASE_URL=postgresql://postgres:postgres@localhost:5631
+  re_frontend:
+    container_name: re_frontend
+    env_file:
+      - ./frontend/.env
+    build:
+      context: ./frontend/
+      dockerfile: ./Dockerfile
+    volumes:
+      - type: bind
+        source: ./frontend
+        target: /app
+      - /app/node_modules
+    working_dir: /app
+    ports:
+      - 5180:5180
+    networks:
+      - airflow
+
+  re_api:
+    container_name: re_api
+    env_file:
+      - api/.env
+    build:
+      context: api/
+      dockerfile: ./Dockerfile
+    volumes:
+      - ./api:/app
+    ports:
+      - 8500:8500
+    expose:
+      - 8500
+    depends_on:
+       - re_astro
+    networks:
+      - airflow
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@localhost:5631
 
 
