--- a/src/dbt_project/dbt_project.yml
+++ b/src/dbt_project/dbt_project.yml
@@ -49,17 +49,64 @@ seeds:
         "Market Cap": bigint
         "Total Revenue": bigint
         "Net Income": bigint
-    gdp:
+
+    raw_government_bailout_stimulus:
+      enabled: true
+      +column_types:
+        "Year": varchar
+        "Originating Crisis": varchar
+        "Policy Date": varchar
+        "Policy Title": varchar
+        "Policy Description": varchar
+        "Federal Policy Number": varchar
+        "Attribution Link": varchar
+        "President": varchar
+        "Vice President": varchar
+        "Govt Intervention": varchar
+
+
+
+    raw_gdp:
       enabled: true
       +column_types:
         date: date
         value: float
-    unemployment_rate:
+    raw_unemployment_rate:
       enabled: true
       +column_types:
         date: date
         value: float
-    cpi:
+    raw_cpi:
+      enabled: true
+      +column_types:
+        date: date
+        value: float
+    raw_nonfarm_payrolls:
+      enabled: true
+      +column_types:
+        date: date
+        value: float
+    raw_job_openings:
+      enabled: true
+      +column_types:
+        date: date
+        value: float
+    raw_average_hourly_earnings:
+      enabled: true
+      +column_types:
+        date: date
+        value: float
+    raw_total_wages_and_salaries:
+      enabled: true
+      +column_types:
+        date: date
+        value: float
+    raw_employment_cost_index:
+      enabled: true
+      +column_types:
+        date: date
+        value: float
+    raw_average_weekly_earnings:
       enabled: true
       +column_types:
         date: date
