modified staging to be a mv, addedin final_stock_gdp_data def

--- a/src/dbt_project/dbt_project.yml
+++ b/src/dbt_project/dbt_project.yml
@@ -24,12 +24,19 @@ vars:
 models:
   dbt_project:
     staging:
-      +materialized: table
+      +materialized: view
+      stg_stock_returns:
+        enabled: true
+      stg_quarterly_stock_returns:
+        enabled: true
+      stg_gdp:
+        enabled: true
     intermediate:
       +materialized: table
     marts:
       +materialized: table
-
+      final_stock_gdp_data:
+        enabled: true
 seeds:
   dbt_project:
     raw_stock_data:
