--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,17 +14,23 @@
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.19",
-    "chart.js": "^3.7.0",
+    "chart.js": "^3.9.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-annotation": "^1.0.2",
     "chartjs-plugin-zoom": "^1.2.0",
     "clsx": "^2.1.0",
     "flowbite": "^2.3.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^4.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-google-charts": "^4.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-marquee-slider": "^1.1.5",
+    "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
