--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -38,6 +38,7 @@ matplotlib==3.7.5
 numpy==1.24.4
 openai==1.34.0
 packaging==24.0
+pandas==2.0.3
 pillow==10.3.0
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -50,6 +51,7 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 rsa==4.9
@@ -57,10 +59,10 @@ singledispatch==4.1.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.30
-sse-starlette==2.1.2
 starlette==0.36.3
 tqdm==4.66.4
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.27.1
 uvloop==0.19.0
