--- a/src/dbt_project/dbt.env
+++ b/src/dbt_project/dbt.env
@@ -1,5 +1,6 @@
 # export DBT_SCHEMA='public' # EDIT THIS FIELD
 
+export DBT_PORT='5432'
 
 ## DO NOT MODIFY BELOW
 # export DBT_PROFILES_DIR='.'   #path to profiles.yml
