--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,32 +4,45 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5180 --host",
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:demo": "vite build --mode demo",
+    "serve:demo": "vite preview --mode demo"
   },
   "dependencies": {
     "@headlessui/react": "^2.0.0-alpha.4",
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "^2.1.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-annotation": "^1.0.2",
-    "chartjs-plugin-zoom": "^1.2.0",
+    "chartjs-plugin-zoom": "^1.2.1",
     "clsx": "^2.1.0",
+    "dagre": "^0.8.5",
+    "eventsource": "^2.0.2",
     "flowbite": "^2.3.0",
+    "html2canvas": "^1.4.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^4.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-fast-marquee": "^1.6.4",
+    "react-flow-renderer": "^10.3.17",
+    "react-ga4": "^2.1.0",
     "react-google-charts": "^4.0.1",
+    "react-markdown": "^9.0.1",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.22.3",
+    "react-speech-recognition": "^3.10.0",
+    "react-tooltip": "^5.27.0",
+    "regenerator-runtime": "^0.14.1",
+    "simple-statistics": "^7.8.3",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -41,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "framer-motion": "^11.0.24",
+    "madge": "^7.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
