--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -34,8 +34,8 @@ importlib_metadata==7.2.0
 importlib_resources==6.4.0
 kiwisolver==1.4.5
 Markdown==3.6
-matplotlib==3.7.5
-numpy==1.24.4
+matplotlib==3.9.2
+numpy==1.26.4
 openai==1.34.0
 packaging==24.0
 pandas==2.0.3
@@ -69,3 +69,10 @@ uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
 zipp==3.19.1
+
+# Added dependencies for NewsAPI, ChromaDB, and LangChain
+newsapi-python==0.2.6
+chromadb==0.3.22
+langchain>=0.0.130
+sentence-transformers==2.2.2  # for embedding model support
+
