--- a/src/dbt_project/profiles.yml
+++ b/src/dbt_project/profiles.yml
@@ -3,7 +3,7 @@ dbt_project:
   outputs:
     dev:
       type: postgres
-      host: postgres
+      host: localhost
       user: postgres
       password: postgres
       dbname: pipelines
