--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -43,7 +43,8 @@
     "react-tooltip": "^5.27.0",
     "regenerator-runtime": "^0.14.1",
     "simple-statistics": "^7.8.3",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
